@@ -19,7 +19,6 @@ sqlite1:
     - MOJO_CONFIG=t/sqlite1.conf make test
   tags:
     - Debian
-    - Jessie
 sqlite2:
   stage: sqlite
   cache:
@@ -31,7 +30,6 @@ sqlite2:
     - MOJO_CONFIG=t/sqlite2.conf make test
   tags:
     - Debian
-    - Jessie
 sqlite3:
   stage: sqlite
   cache:
@@ -45,7 +43,6 @@ sqlite3:
     - MOJO_CONFIG=t/sqlite3.conf make test
   tags:
     - Debian
-    - Jessie
 postgresql1:
   stage: postgresql
   cache:
@@ -60,7 +57,6 @@ postgresql1:
     - MOJO_CONFIG=t/postgresql1.conf make test
   tags:
     - Debian
-    - Jessie
 postgresql2:
   stage: postgresql
   cache:
@@ -75,7 +71,6 @@ postgresql2:
     - MOJO_CONFIG=t/postgresql2.conf make test
   tags:
     - Debian
-    - Jessie
 postgresql3:
   stage: postgresql
   cache:
@@ -93,7 +88,6 @@ postgresql3:
     - MOJO_CONFIG=t/postgresql3.conf make test
   tags:
     - Debian
-    - Jessie
 mysql1:
   stage: mysql
   cache:
@@ -109,7 +103,6 @@ mysql1:
     - MOJO_CONFIG=t/mysql1.conf make test
   tags:
     - Debian
-    - Jessie
 mysql2:
   stage: mysql
   cache:
@@ -125,7 +118,6 @@ mysql2:
     - MOJO_CONFIG=t/mysql2.conf make test
   tags:
     - Debian
-    - Jessie
 mysql3:
   stage: mysql
   cache:
@@ -143,4 +135,3 @@ mysql3:
     - MOJO_CONFIG=t/mysql3.conf make test
   tags:
     - Debian
-    - Jessie
